# eVTOL

./: .gitignore  CMakeLists.txt  setup.bat
src/apps/eVTOL/: main.cpp
src/apps/eVTOL/entities/charger/: JCharger.cpp  JCharger.h
src/apps/eVTOL/entities/company/: JCompany.cpp  JCompany.h
src/apps/eVTOL/entities/vehicle/: JeVTOL.cpp  JeVTOL.h
src/apps/eVTOL/sim/: JScene.cpp  JScene.h
src/core/containers/: JFlags.h  JString.h
src/core/diagnostics/: JLogger.cpp  JLogger.h
src/core/events/: JEventQueue.cpp  JEventQueue.h
src/core/memory/: JMemoryCommon.h
src/core/physics/: JQuantity.h  JUnits.h
src/core/processes/: JProcess.cpp  JProcess.h  JProcessQueue.cpp  JProcessQueue.h  JThreadedProcess.cpp  JThreadedProcess.h
src/core/sim/: JSimulator.cpp  JSimulator.h
src/core/threading/: JThreadPool.h
src/core/time/: JTimer.cpp  JTimer.h
tests/: JTest.h  JTestSuite.cpp  JTestSuite.h  main.cpp
tests/unit_tests/: JTestThreadpool.h  JTestTimer.h  JTestUnits.h  JTestVector.h
